--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#363636" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Next UK Election?</title>
+		<title>The Next Election UK</title>
+
+		<meta name="title" content="The Next Election UK">
+		<meta name="description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown.">
+
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="The Next Election UK" />
+		<meta property="og:description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown." />
+		<meta property="og:url" content="%PUBLIC_URL%" />
+		<meta property="og:image" content="%PUBLIC_URL%/snapshot.png" />
+
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:title" content="The Next Election UK" />
+		<meta property="twitter:description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown." />
+		<meta property="twitter:image" content="%PUBLIC_URL%/snapshot.png" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript.</noscript>
