--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/icon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#363636" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
