--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" type="image/png" href="/icon.png"/>
+		<link rel="shortcut icon" type="image/png" href="/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>The Next Election UK</title>
 
-		<meta name="title" content="The Next Election UK">
-		<meta name="description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown.">
+		<meta name="title" content="The Next Election UK" />
+		<meta
+			name="description"
+			content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown."
+		/>
 
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="The Next Election UK" />
-		<meta property="og:description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown." />
+		<meta
+			property="og:description"
+			content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown."
+		/>
 		<meta property="og:url" content="" />
 		<meta property="og:image" content="/snapshot.png" />
 
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:title" content="The Next Election UK" />
-		<meta property="twitter:description" content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown." />
+		<meta
+			property="twitter:description"
+			content="Awaiting the next government, or to watch the current grow stronger? Keep an eye on the countdown."
+		/>
 		<meta property="twitter:image" content="/snapshot.png" />
 	</head>
 	<body>
