--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="shortcut icon" type="image/png" href="/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>The Next Election UK</title>
+		<meta name="theme-color" content="#404040" />
 
 		<meta name="title" content="The Next Election UK" />
 		<meta
